libs/bng/test/negative/N0307_compartment_in_seed_species_2_compartments.bngl
# FAIL
# OUTPUT: error: The maximum number of compartments that a volume complex may use is 1, error for 'A(a!1)@C.A(a!1)@B'.

begin compartments
   B 3 1
   C 3 1  
end compartments

begin molecule types
   A(a)
end molecule types

begin seed species

   A(a!1)@C.A(a!1)@B 1

# the following line does not end with newline   
end seed species